# Sanguinova

./: .gitignore  CMakeLists.txt  README.md  build_windows.bat
.claude/: settings.local.json
.github/workflows/: build.yml
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.h
src/dsp/: AutoGain.h  OnePole.h  Oversampler.h  SVFFilter.h  SanguinovaEngine.h
